--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="profile">
         <img src="" alt="">
         <h2>Hello.</h2>
-        <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        <p class="intro">I study computer science at Upenn. I was a professional translator and conference interpreter.</p>
       </div>
       <hr>
       <div class="skills">
