--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I am Ling-Hsin.</h1>
-      <h2>a master student in computer science.</h2>
+      <h2 class="subtitle">a master student in computer science.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img class="mountain" src="images/mountain.png" alt="mountain-img">
     </div>
