--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Ling-Hsin's Personal Site</title>
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+    <link rel="icon" href="images/favicon.png">
   </head>
   <body>
     <div class="top-container">
