--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I am Ling-Hsin.</h1>
-      <h2 class="subtitle">a master student in computer science.</h2>
+      <h2 class="subtitle">a career-switcher<br>and a master student in computer science.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img class="mountain" src="images/mountain.png" alt="mountain-img">
     </div>
@@ -19,23 +19,31 @@
       <div class="profile">
         <img src="" alt="">
         <h2>Hello.</h2>
-        <p class="intro">I study computer science at Upenn. I was a professional translator and conference interpreter.</p>
+        <p class="intro">I study computer science at Upenn. <br>Before this, I was a professional translator and conference interpreter.
+        <br>I believe in the potential of the intersecting human language and computer science.</p>
+        <a class="myStoryBTN" href="mailto:name@email.com">My Story</a>
       </div>
       <hr>
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
           <img class="skill-image-1" src="images/programing.png" alt="">
-          <h3>Lorem & Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          <h3>Python, C++ and Java Programming</h3>
+          <p>I can solve problems and design software using Python, C++ and Java, drawing from my knowledge and skills in OOP, data structure, and algorithm. I can also code in assembly language if lower-level maneuvers are ever required.</p>
         </div>
         <div class="skill-row">
-          <img class="skill-image-2" src="images/microphone.png" alt="">
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <img class="skill-image-2" src="images/web.png" alt="">
+          <h3>Front-End Development</h3>
+          <p>I can create web pages using HTML, CSS, and Javascript.</p>
+        </div>
+        <div class="skill-row-final">
+          <img class="skill-image-3" src="images/translating.png" alt="">
+          <h3>Translation and Interpretation</h3>
+          <p>These are my good old skills. I have translated 7 books from English to Chinse and provided consecutive and simultaneous interpreting to over a hundred international conferences. I possess a professional certificate in Chinese-English conference interpreting.</p>
         </div>
       </div>
-      <hr>
+      <br>
+    <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Lorem ipsum dolor sit amet, non elit.</h3>
