--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <img src="" alt="">
         <h2>Hello.</h2>
         <p class="intro">I study computer science at Upenn. <br>Before this, I was a professional translator and conference interpreter.
-        <br>I believe in the potential of the intersecting human language and computer science.</p>
-        <a class="myStoryBTN" href="mailto:name@email.com">My Story</a>
+        <br>I believe in the potential of intersecting human language and computer science.</p>
+        <a class="myStoryBTN" href="my_story.html">My Story</a>
       </div>
       <hr>
       <div class="skills">
@@ -46,18 +46,17 @@
     <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <h3>lhkung@seas.upenn.edu</h3>
+        <p class="contact-message">Message me if you are interested in my skills and potentials.
+        <br> I am open to IT internship in summer 2022.
+        <br> I am currently unable to offer translation or interpretation services, but I am more than happy to refer top-notch translators or interpreters to you.</p>
       </div>
     </div>
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p class="copyright">© 2021 Ling-Hsin Kung.</p>
+      <a class="footer-link" href="https://www.linkedin.com/in/ling-hsin-kung-%E5%AD%94%E4%BB%A4%E6%96%B0-67070992/">LinkedIn</a>
+      <p class="copyright">© 2021 Ling-Hsin Kung</p>
     </div>
 
 
