--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <div class="top-container">
       <h1>I am Ling-Hsin.</h1>
       <h2 class="subtitle">a career-switcher<br>and a master student in computer science.</h2>
+      <img class="kung" src="images/kung.png" alt="">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="" alt="">
+        <img class="" src="" alt="">
         <h2>Hello.</h2>
         <p class="intro">I study computer science at Upenn. <br>Before this, I was a professional translator and conference interpreter.
         <br>I believe in the potential of intersecting human language and computer science.</p>
