--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="" src="" alt="">
+        <img class="figure" src="" alt="">
         <h2>Hello.</h2>
         <p class="intro">I study computer science at Upenn. <br>Before this, I was a professional translator and conference interpreter.
         <br>I believe in the potential of intersecting human language and computer science.</p>
