--- a/books_translated.html
+++ b/books_translated.html
@@ -8,21 +8,39 @@
   </head>
   <body class="translated-body">
     <div class="book">
+      <div class="book">
+        <img class="TAW-E" src="images/TAW-English.jpeg" alt="">
+        <img class="arrow1" src="images/right-arrow.png" alt="">
+        <img class="TAW-C" src="images/TAW-Chinese.jpeg" alt="">
+      </div>
+      <hr>
       <img class="TTM-E" src="images/TTM-English.jpeg" alt="">
-      <img class="arrow1" src="images/right-arrow.png" alt="">
+      <img class="arrow2" src="images/right-arrow.png" alt="">
       <img class="TTM-C" src="images/TTM-Chinese.jpeg" alt="">
     </div>
     <hr>
     <div class="book">
-      <img class="TAW-E" src="images/TAW-English.jpeg" alt="">
-      <img class="arrow2" src="images/right-arrow.png" alt="">
-      <img class="TAW-C" src="images/TAW-Chinese.jpeg" alt="">
+      <img class="CA-E" src="images/CA-English.jpeg" alt="">
+      <img class="arrow4" src="images/right-arrow.png" alt="">
+      <img class="CA-C" src="images/CA-Chinese.jpeg" alt="">
     </div>
     <hr>
     <div class="book">
-      <img class="TGA-E" src="images/TGA-English.jpeg" alt="">
-      <img class="arrow3" src="images/right-arrow.png" alt="">
-      <img class="TGA-C" src="images/TGA-Chinese.jpeg" alt="">
+      <img class="HOAX-E" src="images/HOAX-English.jpeg" alt="">
+      <img class="arrow5" src="images/right-arrow.png" alt="">
+      <img class="HOAX-C" src="images/HOAX-Chinese.jpeg" alt="">
+    </div>
+    <hr>
+    <div class="book">
+      <img class="HNTDA-E" src="images/HNTDA-English.jpeg" alt="">
+      <img class="arrow6" src="images/right-arrow.png" alt="">
+      <img class="HNTDA-C" src="images/HNTDA-Chinese.jpeg" alt="">
+    </div>
+    <hr>
+    <div class="book">
+      <img class="HST-E" src="images/HST-English.jpeg" alt="">
+      <img class="arrow7" src="images/right-arrow.png" alt="">
+      <img class="HST-C" src="images/HST-Chinese.jpeg" alt="">
     </div>
     <hr>
   </body>
