--- a/books_translated.html
+++ b/books_translated.html
@@ -7,6 +7,12 @@
     <link rel="icon" href="images/favicon.png">
   </head>
   <body class="translated-body">
+    <div class="top-container">
+      <h1 class="translated-h1">Books I translated</h1>
+      <img class="earth" src="images/earth.png" alt="">
+      <h2 class="quote">Without translation, we would inhabit parishes bordering on silence.
+      <br> — George Steiner</h2>
+    </div>
     <div class="book">
       <div class="book">
         <img class="TAW-E" src="images/TAW-English.jpeg" alt="">
@@ -43,5 +49,10 @@
       <img class="HST-C" src="images/HST-Chinese.jpeg" alt="">
     </div>
     <hr>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/ling-hsin-kung-%E5%AD%94%E4%BB%A4%E6%96%B0-67070992/">LinkedIn</a>
+      <p class="copyright">© 2021 Ling-Hsin Kung</p>
+    </div>
   </body>
+
 </html>
