--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>Hello.</h2>
         <p class="intro">I study computer science at Upenn. <br>Before this, I was a professional translator and conference interpreter.
         <br>I believe in the potential of intersecting human language and computer science.</p>
-        <a class="myStoryBTN" href="my_story.html">My Story</a>
+        <a class="my-story-BTN" href="my_story.html">My Story</a>
       </div>
       <hr>
       <div class="skills">
@@ -38,6 +38,7 @@
           <img class="skill-image-3" src="images/translating.png" alt="">
           <h3>Translation and Interpretation</h3>
           <p>These are my good old skills. I have translated 7 books from English to Chinse and provided consecutive and simultaneous interpreting to over a hundred international conferences. I possess a professional certificate in Chinese-English conference interpreting.</p>
+          <a class="translated-BTN" href="translated.html">My Translation Works</a>
         </div>
       </div>
       <br>
