--- a/translated.html
+++ b/translated.html
@@ -26,6 +26,12 @@
     </div>
     <hr>
     <div class="book">
+      <img class="TGA-E" src="images/TGA-English.jpeg" alt="">
+      <img class="arrow3" src="images/right-arrow.png" alt="">
+      <img class="TGA-C" src="images/TGA-Chinese.jpeg" alt="">
+    </div>
+    <hr>
+    <div class="book">
       <img class="CA-E" src="images/CA-English.jpeg" alt="">
       <img class="arrow4" src="images/right-arrow.png" alt="">
       <img class="CA-C" src="images/CA-Chinese.jpeg" alt="">
