--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <div class="skill-row">
           <img class="skill-image-2" src="images/web.png" alt="">
           <h3>Front-End Development</h3>
-          <p>I can create web pages using HTML, CSS, and Javascript.</p>
+          <p>I can create web pages using HTML, CSS, and Javascript. You are looking at one of my works.</p>
         </div>
         <div class="skill-row-final">
           <img class="skill-image-3" src="images/translating.png" alt="">
           <h3>Translation and Interpretation</h3>
           <p>These are my good old skills. I have translated 7 books from English to Chinse and provided consecutive and simultaneous interpreting to over a hundred international conferences. I possess a professional certificate in Chinese-English conference interpreting.</p>
-          <a class="translated-BTN" href="translated.html">My Translation Works</a>
         </div>
+          <a class="translated-BTN" href="translated.html">Books I translated</a>
       </div>
       <br>
     <hr>
@@ -57,7 +57,5 @@
       <a class="footer-link" href="https://www.linkedin.com/in/ling-hsin-kung-%E5%AD%94%E4%BB%A4%E6%96%B0-67070992/">LinkedIn</a>
       <p class="copyright">© 2021 Ling-Hsin Kung</p>
     </div>
-
-
   </body>
 </html>
