--- a/translated.html
+++ b/translated.html
@@ -9,7 +9,7 @@
   <body class="translated-body">
     <div class="top-container">
       <h1 class="translated-h1">Books I translated</h1>
-      <img class="earth" src="images/earth.png" alt="">
+      <img class="earth" src="images/bookshelf.png" alt="">
       <h2 class="quote">Without translation, we would inhabit parishes bordering on silence.
       <br> — George Steiner</h2>
     </div>
