--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
 
     <div class="bottom-container">
+      <p class="footer">lhkung@seas.upenn.edu</p>
       <a class="footer-link" href="https://www.linkedin.com/in/ling-hsin-kung-%E5%AD%94%E4%BB%A4%E6%96%B0-67070992/">LinkedIn</a>
       <p class="copyright">© 2021 Ling-Hsin Kung</p>
     </div>
