--- a/my_story.html
+++ b/my_story.html
@@ -14,10 +14,13 @@
     <p class="story">I began my career as a freelance Chinese-English interpreter and translator at a time when major breakthroughs were made in deep learning and Google’s switch from statistical machine translation to neural machine translation was bearing fruit. It has been an exciting career. I interpreted for politicians seen on TV, important conferences attended by the president, and technical meetings on the latest technological innovation. However, I never was a man complacent with the status quo. As cases from the IT industry, including those about IoT, AI, 5G, edge computing, and cloud computing, came to constitute a significant bulk of my workload, I became not only more interested in but also more knowledgeable about its opportunities. Slowly emerging is a vision to integrate my expertise in language communication with the potentials of computer science. </p>
     <p class="story">My vision was furnished with a specific direction when I was commissioned to translate tech journalist James Vlahos’s Talk to Me: How Voice Computing Will Transform the Way We Live, Work, and Think, a book that introduced me to important concepts in the field of natural language processing, especially neural network translation. NLP captured my imagination. My emerging interest in NLP was further enhanced by an interesting episode that occurred in my professional practice. In 2018, I interpreted for a peculiar conference where the organizer, in addition to hiring human simultaneous interpreters, employed Microsoft’s AI-powered automatic translation technology to produce live English subtitles for the Chinese speech that took place on stage. To my amusement, the machine translation turned out to be so incomprehensible that the host eventually decided to feed my output into Microsoft’s speech recognition application, which finally produced fluent and intelligible English subtitles. While I was glad I defeated machine that day, I was deeply inspired by the intersection of human language and computation.</p>
     <p class="story">I began to imagine: what if I can tap into its opportunity? What if I can develop a powerful tool for my fellow translators based on parallel texts and n-gram query? What if I can contribute to the development of machine translation? While the prospects of high quality machine translation are widely dismissed, if not derided, by my fellow translators, I believe the technology can not only assist translators in translating better but also democratize access to translation, providing information across language barriers in occasions where human practitioners are not economically viable. I want to be part of this thriving field of research. Just as I communicate between languages, I want to be the link that connects expertise from translation to that from computer science. With this goal in mind, I became determined to pursue a second master degree –– this time in computer science.</p>
-
-
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="bottom-container">
+      <p class="footer">lhkung@seas.upenn.edu</p>
       <a class="footer-link" href="https://www.linkedin.com/in/ling-hsin-kung-%E5%AD%94%E4%BB%A4%E6%96%B0-67070992/">LinkedIn</a>
       <p class="copyright">© 2021 Ling-Hsin Kung</p>
     </div>
