--- a/index.html
+++ b/index.html
@@ -51,10 +51,8 @@
         <br> I am currently unable to offer translation or interpretation services, but I am more than happy to refer top-notch translators or interpreters to you.</p>
       </div>
     </div>
-
-
     <div class="bottom-container">
-      <p class="footer">lhkung@seas.upenn.edu</p>
+      <a class="footer-link" href="mailto:lhkung@seas.upenn.edu">lhkung@seas.upenn.edu</a>
       <a class="footer-link" href="https://www.linkedin.com/in/ling-hsin-kung-%E5%AD%94%E4%BB%A4%E6%96%B0-67070992/">LinkedIn</a>
       <p class="copyright">© 2021 Ling-Hsin Kung</p>
     </div>
