--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>lhkung@seas.upenn.edu</h3>
+        <a class="contact-link" href="mailto:lhkung@seas.upenn.edu">lhkung@seas.upenn.edu</a>
         <p class="contact-message">Message me if you are interested in my skills and potentials.
         <br> I am open to IT internship in summer 2022.
         <br> I am currently unable to offer translation or interpretation services, but I am more than happy to refer top-notch translators or interpreters to you.</p>
