--- a/my_story.html
+++ b/my_story.html
@@ -9,7 +9,8 @@
   <body class="my-story-body">
     <div class="top-container">
       <h1 class="my-story-h1">My story</h1>
-      <h2></h2>
+      <img class="allegory" src="images/allegory.jpeg" alt="">
+      <p class="allegory-explain">An illustration of Plato's allegory of the cave. Not my story, though.</p>
     </div>
     <div class="story-container">
       <p class="story">Why leave behind a thriving career in translation and interpretation to study computer science? I was often asked this question when I told my colleagues that I am going to study computer science at Upenn. Indeed, I was a Chinese-English translator and interpreter by trade, and I will never forget the grueling training I went through to become one. But I am also a man of aspirations, with an appetite for novel challenges and opportunities out there. As IT-related texts and conferences became a steady stream for my workload over the past three years of my professional practice, a vision gradually developed in my mind –– a vision to integrate my expertise in translation with the endless potentials of computer science, driven by an insatiable desire to push the boundaries of personal growth and those of the translation community in Taiwan. </p>
