--- a/my_story.html
+++ b/my_story.html
@@ -9,7 +9,7 @@
   <body class="my-story-body">
     <div class="top-container">
       <h1 class="my-story-h1">My story</h1>
-      <img class="allegory" src="images/allegory.jpeg" alt="">
+      <img class="allegory" src="images/allegory.png" alt="">
       <p class="allegory-explain">An illustration of Plato's allegory of the cave. Not my story, though.</p>
     </div>
     <div class="story-container">
