--- a/translated.html
+++ b/translated.html
@@ -57,7 +57,7 @@
     <hr>
     <div class="bottom-container">
       <a class="footer-link" href="mailto:lhkung@seas.upenn.edu">lhkung@seas.upenn.edu</a>
-      <a class="footer-link" href="https://www.linkedin.com/in/ling-hsin-kung-%E5%AD%94%E4%BB%A4%E6%96%B0-67070992/">LinkedIn</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/ling-hsin-kung-67070992/">LinkedIn</a>
       <p class="copyright">© 2021 Ling-Hsin Kung</p>
     </div>
   </body>
