--- a/translated.html
+++ b/translated.html
@@ -18,6 +18,7 @@
         <img class="TAW-E" src="images/TAW-English.jpeg" alt="">
         <img class="arrow1" src="images/right-arrow.png" alt="">
         <img class="TAW-C" src="images/TAW-Chinese.jpeg" alt="">
+        <p class="book-intro">Written by Microsoft President Brad Smith, this book is a refreshing proposition of Microsoft's approach to addressing challenges that arose out of the technologies they created.</p>
       </div>
       <hr>
       <img class="TTM-E" src="images/TTM-English.jpeg" alt="">
