--- a/translated.html
+++ b/translated.html
@@ -18,42 +18,48 @@
         <img class="TAW-E" src="images/TAW-English.jpeg" alt="">
         <img class="arrow1" src="images/right-arrow.png" alt="">
         <img class="TAW-C" src="images/TAW-Chinese.jpeg" alt="">
-        <p class="book-intro">Written by Microsoft President Brad Smith, this book is a refreshing proposition of Microsoft's approach to addressing challenges that arose out of the technologies they created.</p>
+        <p class="book-intro">Written by Microsoft President Brad Smith, this book is a refreshing proposition of Microsoft's approach to addressing challenges that arose out of the technologies they created. It reveals how the company deals with issues such that privacy, law enforcement and misinformation. </p>
       </div>
       <hr>
       <img class="TTM-E" src="images/TTM-English.jpeg" alt="">
       <img class="arrow2" src="images/right-arrow.png" alt="">
       <img class="TTM-C" src="images/TTM-Chinese.jpeg" alt="">
+      <p class="book-intro">This is the very first book I was commissioned to translate. In-depth but not esoteric, it is a compelling exposition on a complicated technology made accessible by tech journalist James Vlahos. Every sentence in the book is well-crafted, making the task of translation a pure enjoyment. I was slightly disappointed when the Taipei-based publisher came up with a rather pecuniary title in Traditioanl Chinese: "Voice Control Future: A Trillion Dollar Business Opportunity." Of course, I am not a self-righteous snob who sniffs at the worldy concern of profitability, but this book is so much more about business opportunities.</p>
     </div>
     <hr>
     <div class="book">
       <img class="TGA-E" src="images/TGA-English.jpeg" alt="">
       <img class="arrow3" src="images/right-arrow.png" alt="">
       <img class="TGA-C" src="images/TGA-Chinese.jpeg" alt="">
+      <p class="book-intro">I was pleasantly surprised when the publisher commissioned me to translate this book. It is not common for them to publish works by contemporary philosophers. Author Roman Krznaric guides us in our endeavor to think longer, to think about how our actions today affect generations to come. This perspective is much needed in democratic societies, where election cycles impose a narrow four-year timeframe of policymaking and voter-decision.</p>
     </div>
     <hr>
     <div class="book">
       <img class="CA-E" src="images/CA-English.jpeg" alt="">
       <img class="arrow4" src="images/right-arrow.png" alt="">
       <img class="CA-C" src="images/CA-Chinese.jpeg" alt="">
+      <p class="book-intro">Written by economics professor Branko Milanovic, this book is an illuminating proposal for the future of capitalism, the system that has rightfully triumphed over socialism and all other systems. The author offers interesting perspectives on immigration, citizenship, and liberal democracy. Poor writing, though.</p>
     </div>
     <hr>
     <div class="book">
       <img class="HOAX-E" src="images/HOAX-English.jpeg" alt="">
       <img class="arrow5" src="images/right-arrow.png" alt="">
       <img class="HOAX-C" src="images/HOAX-Chinese.jpeg" alt="">
+      <p class="book-intro">As a history buff, I enjoyed translating this book, despite its pedantic writing style. This is a book about interesting hoaxes in human history and makes a fun read.</p>
     </div>
     <hr>
     <div class="book">
       <img class="HNTDA-E" src="images/HNTDA-English.jpeg" alt="">
       <img class="arrow6" src="images/right-arrow.png" alt="">
       <img class="HNTDA-C" src="images/HNTDA-Chinese.jpeg" alt="">
+      <p class="book-intro">Translating a book that may improve my relationship? Of course! Written by behavioral scientist Logan Ury, this book is based not on individual perspectives but on scientific research. It teaches you how to navigate the challenges involved in every stage of a romantic relationship: finding someone, being with someone, or breaking up with someone. The scientific method has its limit, though. Not every field of human experience can be accounted for by science. Don't forget that.</p>
     </div>
     <hr>
     <div class="book">
       <img class="HST-E" src="images/HST-English.jpeg" alt="">
       <img class="arrow7" src="images/right-arrow.png" alt="">
       <img class="HST-C" src="images/HST-Chinese.jpeg" alt="">
+      <p>This is a captivating narrative of the inner-workings of military intelligence, but it is unfortunately marred by horrible writing on the part of the author, David Omand, a former military intelligence officer in the British government. The eternal question is: to what extent should the translated prose reflect the flaws in the original writing?</p>
     </div>
     <hr>
     <div class="bottom-container">
