--- a/translated.html
+++ b/translated.html
@@ -24,7 +24,7 @@
       <img class="TTM-E" src="images/TTM-English.jpeg" alt="">
       <img class="arrow2" src="images/right-arrow.png" alt="">
       <img class="TTM-C" src="images/TTM-Chinese.jpeg" alt="">
-      <p class="book-intro">This is the very first book I was commissioned to translate. In-depth but not esoteric, it is a compelling exposition on a complicated technology made accessible by tech journalist James Vlahos. Every sentence in the book is well-crafted, making the task of translation a pure enjoyment. I was slightly disappointed when the Taipei-based publisher came up with a rather pecuniary title in Traditioanl Chinese: "Voice Control Future: A Trillion Dollar Business Opportunity." Of course, I am not a self-righteous snob who sniffs at the worldy concern of profitability, but this book is so much more about business opportunities.</p>
+      <p class="book-intro">This is the very first book I was commissioned to translate. In-depth but not esoteric, it is a compelling exposition on a complicated technology made accessible by tech journalist James Vlahos. Every sentence in the book is well-crafted, making the task of translation a pure enjoyment. I was slightly disappointed when the Taipei-based publisher came up with a rather pecuniary title in Traditioanl Chinese: "Voice Control Future: A Trillion Dollar Business Opportunity." Of course, I am not a self-righteous snob who sniffs at the worldy concern of profitability, but this book is so much more about the bottom line.</p>
     </div>
     <hr>
     <div class="book">
