--- a/translated.html
+++ b/translated.html
@@ -45,7 +45,7 @@
       <img class="HOAX-E" src="images/HOAX-English.jpeg" alt="">
       <img class="arrow5" src="images/right-arrow.png" alt="">
       <img class="HOAX-C" src="images/HOAX-Chinese.jpeg" alt="">
-      <p class="book-intro">As a history buff, I enjoyed translating this book, despite its pedantic writing style. This is a book about interesting hoaxes in human history and makes a fun read.</p>
+      <p class="book-intro">As a history buff, I enjoyed translating this book, despite its pedantic writing style. This is a meticulous compilation of interesting hoaxes in human history and makes a fun read.</p>
     </div>
     <hr>
     <div class="book">
