--- a/translated.html
+++ b/translated.html
@@ -59,7 +59,7 @@
       <img class="HST-E" src="images/HST-English.jpeg" alt="">
       <img class="arrow7" src="images/right-arrow.png" alt="">
       <img class="HST-C" src="images/HST-Chinese.jpeg" alt="">
-      <p>This is a captivating narrative of the inner-workings of military intelligence, but it is unfortunately marred by horrible writing on the part of the author, David Omand, a former military intelligence officer in the British government. The eternal question is: to what extent should the translated prose reflect the flaws in the original writing?</p>
+      <p class="book-intro">This is a captivating narrative of the inner-workings of military intelligence, but it is unfortunately marred by horrible writing on the part of the author, David Omand, a former military intelligence officer in the British government. The eternal question is: to what extent should the translated prose reflect the flaws in the original writing?</p>
     </div>
     <hr>
     <div class="bottom-container">
