--- a/translated.html
+++ b/translated.html
@@ -18,7 +18,7 @@
         <img class="TAW-E" src="images/TAW-English.jpeg" alt="">
         <img class="arrow1" src="images/right-arrow.png" alt="">
         <img class="TAW-C" src="images/TAW-Chinese.jpeg" alt="">
-        <p class="book-intro">Written by Microsoft President Brad Smith, this book is a refreshing proposition of Microsoft's approach to addressing challenges that arose out of the technologies they created. It reveals how the company deals with issues such that privacy, law enforcement and misinformation. </p>
+        <p class="book-intro">Written by Microsoft President Brad Smith, this book offers a refreshing account of Microsoft's approach to addressing challenges that arise out of the technologies it creates, revealing how the company deals with issues such as privacy, law enforcement and misinformation. </p>
       </div>
       <hr>
       <img class="TTM-E" src="images/TTM-English.jpeg" alt="">
@@ -45,14 +45,14 @@
       <img class="HOAX-E" src="images/HOAX-English.jpeg" alt="">
       <img class="arrow5" src="images/right-arrow.png" alt="">
       <img class="HOAX-C" src="images/HOAX-Chinese.jpeg" alt="">
-      <p class="book-intro">As a history buff, I enjoyed translating this book, despite its pedantic writing style. This is a meticulous compilation of interesting hoaxes in human history that makes a fun read.</p>
+      <p class="book-intro">As a history buff, I enjoyed translating this one, despite its dry, pedantic writing style. This is a meticulous compilation of interesting hoaxes in human history that makes a fun read.</p>
     </div>
     <hr>
     <div class="book">
       <img class="HNTDA-E" src="images/HNTDA-English.jpeg" alt="">
       <img class="arrow6" src="images/right-arrow.png" alt="">
       <img class="HNTDA-C" src="images/HNTDA-Chinese.jpeg" alt="">
-      <p class="book-intro">Translating a book that may improve my relationship? Of course! Written by behavioral scientist Logan Ury, this book is based not on individual perspectives but on scientific research. It teaches you how to navigate the challenges involved in every stage of a romantic relationship: finding someone, being with someone, or breaking up with someone. The scientific method has its limit, though. Not every field of human experience can be accounted for by science. Don't forget that.</p>
+      <p class="book-intro">Translating a book that may improve my relationship? Of course! Written by behavioral scientist Logan Ury, this book is based not on individual perspectives but on scientific research. It teaches you how to navigate the challenges involved in every stage of a romantic relationship: finding someone, being with someone, or breaking up with someone. That said, I am convinced that the scientific method has its limits. Not every field of human experience can be accounted for by science. Don't forget that.</p>
     </div>
     <hr>
     <div class="book">
