--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h2>My Skills.</h2>
         <div class="skill-row">
           <img class="skill-image-1" src="images/programing.png" alt="">
-          <h3>Python, C++ and Java Programming</h3>
-          <p>I can solve problems and design software using Python, C++ and Java, drawing from my knowledge and skills in OOP, data structure, and algorithm. I can also code in assembly language if lower-level maneuvers are ever required.</p>
+          <h3>C, C++, Java, and Python Programming</h3>
+          <p>I can solve problems and design software using C, C++, Java, and Python, drawing from my knowledge and skills in OOP, data structure, and algorithm. I can also code in assembly language if lower-level maneuvers are ever required.</p>
         </div>
         <div class="skill-row">
           <img class="skill-image-2" src="images/web.png" alt="">
